k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaming
  namespace: web
  labels:
    app: gameapp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: gameapp
